--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -64,7 +64,7 @@
        <enum>QTabWidget::South</enum>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>5</number>
       </property>
       <widget class="QWidget" name="infoTab">
        <attribute name="title">
@@ -243,15 +243,15 @@
            </sizepolicy>
           </property>
           <property name="currentIndex">
-           <number>2</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="histogramPage">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>193</width>
-             <height>73</height>
+             <width>178</width>
+             <height>40</height>
             </rect>
            </property>
            <attribute name="label">
@@ -271,7 +271,7 @@
            <property name="geometry">
             <rect>
              <x>0</x>
-             <y>-84</y>
+             <y>0</y>
              <width>182</width>
              <height>256</height>
             </rect>
@@ -410,7 +410,7 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>180</width>
+             <width>159</width>
              <height>256</height>
             </rect>
            </property>
@@ -772,6 +772,118 @@
         </item>
        </layout>
       </widget>
+      <widget class="QWidget" name="segTab">
+       <attribute name="title">
+        <string>Segmentation</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout_4">
+        <property name="margin">
+         <number>0</number>
+        </property>
+        <item row="0" column="0" rowspan="3">
+         <widget class="QImageInteractiveDrawer" name="segmentationViewer" native="true">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+            <horstretch>10</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1" rowspan="2" colspan="3" alignment="Qt::AlignTop">
+         <widget class="QGroupBox" name="segGroupBox">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="title">
+           <string>Control Panel</string>
+          </property>
+          <layout class="QGridLayout" name="gridLayout_5">
+           <item row="1" column="0" colspan="4">
+            <widget class="QSlider" name="lowerDiffSlider">
+             <property name="pageStep">
+              <number>5</number>
+             </property>
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="2">
+            <widget class="QRadioButton" name="seg4Con">
+             <property name="text">
+              <string>4</string>
+             </property>
+             <property name="checked">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="3">
+            <widget class="QRadioButton" name="seg8Con">
+             <property name="text">
+              <string>8</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0" colspan="4">
+            <widget class="QLabel" name="lowerDiffLabel">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="text">
+              <string>Lower Difference</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0" colspan="4">
+            <widget class="QLabel" name="higherDiffLabel">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="text">
+              <string>Higher Difference</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="0" colspan="2">
+            <widget class="QLabel" name="connectivityLabel">
+             <property name="text">
+              <string>Connectivity</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="0" colspan="4">
+            <widget class="QSlider" name="higherDiffSlider">
+             <property name="pageStep">
+              <number>5</number>
+             </property>
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item row="2" column="2" alignment="Qt::AlignBottom">
+         <widget class="QPushButton" name="refreshSegButton">
+          <property name="text">
+           <string>Refresh</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
       <widget class="QWidget" name="analysisTab">
        <attribute name="title">
         <string>Analysis</string>
@@ -1078,6 +1190,12 @@
    <class>QImageDrawer</class>
    <extends>QWidget</extends>
    <header>qimagedrawer.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>QImageInteractiveDrawer</class>
+   <extends>QWidget</extends>
+   <header>qimageinteractivedrawer.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
