--- a/gui/parametersdialog.ui
+++ b/gui/parametersdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>270</width>
-    <height>401</height>
+    <height>289</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,6 @@
    <bool>true</bool>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <item alignment="Qt::AlignTop">
-    <widget class="QImageViewer" name="viewer" native="true"/>
-   </item>
    <item alignment="Qt::AlignBottom">
     <widget class="QLabel" name="kSizeLabel">
      <property name="sizePolicy">
@@ -35,6 +32,9 @@
    </item>
    <item alignment="Qt::AlignBottom">
     <widget class="QSlider" name="kSizeSlider">
+     <property name="maximum">
+      <number>300</number>
+     </property>
      <property name="value">
       <number>6</number>
      </property>
@@ -114,14 +114,6 @@
    </item>
   </layout>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>QImageViewer</class>
-   <extends>QWidget</extends>
-   <header>qimageviewer.h</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections>
   <connection>
