--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -64,7 +64,7 @@
        <enum>QTabWidget::South</enum>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="infoTab">
        <attribute name="title">
@@ -111,7 +111,7 @@
         <property name="margin">
          <number>0</number>
         </property>
-        <item row="5" column="2" alignment="Qt::AlignBottom">
+        <item row="6" column="2" alignment="Qt::AlignBottom">
          <widget class="QDialogButtonBox" name="ccButtonBox">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -124,7 +124,7 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="0" rowspan="6">
+        <item row="0" column="0" rowspan="7">
          <widget class="QImageDrawer" name="ccDrawer" native="true">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -175,7 +175,17 @@
            <item>
             <widget class="QRadioButton" name="calibreRadio">
              <property name="text">
-              <string>Manually Calibre</string>
+              <string>Calibre</string>
+             </property>
+             <attribute name="buttonGroup">
+              <string notr="true">buttonGroup</string>
+             </attribute>
+            </widget>
+           </item>
+           <item>
+            <widget class="QRadioButton" name="gaugeRadio">
+             <property name="text">
+              <string>Gauge a Line</string>
              </property>
              <attribute name="buttonGroup">
               <string notr="true">buttonGroup</string>
@@ -211,17 +221,17 @@
              </property>
             </widget>
            </item>
-           <item>
-            <widget class="QPushButton" name="autoCalibreButton">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="text">
-              <string>Automatically Calibre</string>
-             </property>
-            </widget>
-           </item>
           </layout>
+         </widget>
+        </item>
+        <item row="5" column="2">
+         <widget class="QLabel" name="gaugeResultLabel">
+          <property name="text">
+           <string/>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
          </widget>
         </item>
        </layout>
