--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -64,7 +64,7 @@
        <enum>QTabWidget::South</enum>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="infoTab">
        <attribute name="title">
@@ -111,33 +111,7 @@
         <property name="margin">
          <number>0</number>
         </property>
-        <item row="6" column="2" alignment="Qt::AlignBottom">
-         <widget class="QDialogButtonBox" name="ccButtonBox">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-            <horstretch>1</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="standardButtons">
-           <set>QDialogButtonBox::Reset|QDialogButtonBox::Save</set>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="0" rowspan="7">
-         <widget class="QImageDrawer" name="ccDrawer" native="true">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-            <horstretch>3</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="cursor">
-           <cursorShape>CrossCursor</cursorShape>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="2" rowspan="5" alignment="Qt::AlignTop">
+        <item row="0" column="1" rowspan="2" alignment="Qt::AlignTop">
          <widget class="QGroupBox" name="ccModeGroupBox">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
@@ -224,13 +198,39 @@
           </layout>
          </widget>
         </item>
-        <item row="5" column="2">
+        <item row="4" column="1" alignment="Qt::AlignBottom">
+         <widget class="QDialogButtonBox" name="ccButtonBox">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+            <horstretch>1</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="standardButtons">
+           <set>QDialogButtonBox::Reset|QDialogButtonBox::Save</set>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="LivePixelViewer" name="ccPixelViewer" native="true"/>
+        </item>
+        <item row="3" column="1">
          <widget class="QLabel" name="gaugeResultLabel">
           <property name="text">
            <string/>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0" rowspan="5">
+         <widget class="QImageDrawer" name="ccDrawer" native="true">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>10</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
           </property>
          </widget>
         </item>
@@ -671,6 +671,12 @@
    <class>QImageInteractiveDrawer</class>
    <extends>QWidget</extends>
    <header>qimageinteractivedrawer.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>LivePixelViewer</class>
+   <extends>QWidget</extends>
+   <header>livepixelviewer.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
