--- a/gui/parametersdialog.ui
+++ b/gui/parametersdialog.ui
@@ -105,9 +105,25 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
       <widget class="QPushButton" name="undoButton">
        <property name="text">
         <string>Undo</string>
+       </property>
+       <property name="icon">
+        <iconset theme="edit-undo"/>
        </property>
       </widget>
      </item>
@@ -115,6 +131,9 @@
       <widget class="QPushButton" name="redoButton">
        <property name="text">
         <string>Redo</string>
+       </property>
+       <property name="icon">
+        <iconset theme="edit-redo"/>
        </property>
       </widget>
      </item>
