--- a/gui/watershedmarkerdialog.ui
+++ b/gui/watershedmarkerdialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>382</width>
+    <width>384</width>
     <height>265</height>
    </rect>
   </property>
@@ -19,15 +19,31 @@
   <layout class="QGridLayout" name="gridLayout">
    <item row="1" column="0">
     <widget class="QPushButton" name="resetButton">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="text">
       <string>Reset</string>
+     </property>
+     <property name="icon">
+      <iconset theme="document-revert">
+       <normaloff/>
+      </iconset>
      </property>
     </widget>
    </item>
    <item row="1" column="4" alignment="Qt::AlignBottom">
     <widget class="QPushButton" name="redoButton">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="text">
       <string>Redo</string>
+     </property>
+     <property name="icon">
+      <iconset theme="edit-redo">
+       <normaloff/>
+      </iconset>
      </property>
     </widget>
    </item>
@@ -59,15 +75,31 @@
    </item>
    <item row="1" column="1" colspan="3">
     <widget class="QPushButton" name="undoButton">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="text">
       <string>Undo</string>
+     </property>
+     <property name="icon">
+      <iconset theme="edit-undo">
+       <normaloff/>
+      </iconset>
      </property>
     </widget>
    </item>
    <item row="1" column="6">
     <widget class="QPushButton" name="previewButton">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="text">
       <string>Preview</string>
+     </property>
+     <property name="icon">
+      <iconset theme="document-export">
+       <normaloff/>
+      </iconset>
      </property>
     </widget>
    </item>
